# MITK

./: .gitignore  CMakeLists.txt  SuperBuild.cmake  init-debug64.bat  init-debug64.sh  init-release32.sh  init-release64.bat  init-release64.sh
Applications/: AppList.cmake
CMake/: mitkFunctionCreateProvisioningFile.cmake  mitkFunctionTestPlugin.cmake  mitkFunctionUseModules.cmake  mitkMacroInstall.cmake
CMake/PackageDepends/: MITK_OpenCV_Config.cmake
CMakeExternals/: CTK.cmake  CTK.patch  DCMTK-3.6.1.patch  ITK-4.7.1.patch  ITK.cmake  OpenCV.cmake  PythonQt-36ab9c7c.patch  SimpleITK.cmake  VTK-6.2.0.patch  ctk-splashscreen.patch  tinyxml-2.6.2.patch
Modules/: ModuleList.cmake
Modules/AppUtil/include/: mitkBaseApplication.h
Modules/AppUtil/src/: mitkBaseApplication.cpp
Modules/CameraCalibration/: mitkTransform.h
Modules/ContourModel/: CMakeLists.txt
Modules/Core/: CMakeLists.txt
Modules/Core/src/: mitkCoreActivator.cpp
Modules/Core/test/: mitkSliceNavigationControllerTest.cpp  mitkSlicedGeometry3DTest.cpp
Modules/CppMicroServices/: CMakeLists.txt
Modules/DICOMReaderServices/: files.cmake
Modules/IGTBase/: CMakeLists.txt
Modules/IOExt/: CMakeLists.txt
Modules/MapperExt/: CMakeLists.txt
Modules/Multilabel/: CMakeLists.txt  mitkLabelSetImageVtkMapper2D.cpp  mitkLabelSetImageVtkMapper2D.h
Modules/Multilabel/autoload/IO/: mitkLabelSetImageIO.cpp
Modules/OpenCVVideoSupport/: mitkImageToOpenCVImageFilter.cpp  mitkOpenCVToMitkImageFilter.cpp  mitkOpenCVVideoSource.cpp  mitkOpenCVVideoSource.h
Modules/Overlays/: mitkTextOverlay2D.cpp
Modules/QtWidgetsExt/: CMakeLists.txt
Modules/ToFHardware/: mitkToFOpenCVImageGrabber.cpp
Modules/VtkShaders/: CMakeLists.txt
Plugins/: PluginList.cmake
Plugins/org.blueberry.test/: plugin.xml
Plugins/org.blueberry.uitest/: plugin.xml
(+73 files in other folders)
